# webscraping_jobs

./: .replit  README.md  carregando_dados.py  carregando_dados_catho.py  carregando_dados_empregacampinas.py  carregando_dados_indeed copy.py  carregando_dados_indeed.py  carregando_dados_infojobs copy.py  carregando_dados_infojobs.py  carregando_dados_infojobs_copy.py  catho.py  catho_teste.py  dados_empregacampinas.json  dados_indeed.json  dados_infojobs.json  dados_infojobss.json  empregacampinas.py  indeed.py  indeed_proxy_testes.py  index.html  pyproject.toml  teste copy.py  teste.py  trabalhabrasil.ipynb  trabalhabrasil.py
