[tool.poetry]
name = "repl_python3_webscrapingjobs"
version = "0.1.0"
description = ""
authors = ["BenitoMarculano <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
PyMySQL = "^1.0.2"
selenium = "^4.1.5"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
